fix:修复续传问题。

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,7 +38,7 @@
                         setTimeout(() => {
                             next()
                         }, 1000);
-                    }
+                    },savedChunkIds:[1,'2']
                 })
             }, 1000);
 
